# osp-icet

./: .gitignore  CMakeLists.txt  README.md  arcball.cpp  benchmark.cpp  fetch_scivis.py  loader.cpp  loader.h  main.cpp  pico_bench.h  plot_scaling.py  render_backend.cpp  render_backend.h  run_compositing_bench.sh  run_output.sh  set_ospray_vars.sh  submit_compositing_scaling.sh  util.cpp  util.h
configs/: generated_small.json
